# kete

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: release-wheels.yml  test-lint.yml
docs/: code_structure.rst  conf.py  index.rst  installation.rst  utils.py
docs/api/: api.rst  cache.rst  constants.rst  conversion.rst  extended_body.rst  fitting.rst  flux.rst  fov.rst  interface.rst  observatory.rst  population.rst  propagation.rst  spice.rst  spitzer.rst  vector.rst
docs/data/: spherex.bsp  spitzer.bsp
docs/plans/: extended_gravity_models.md
docs/tutorials/: 2024yr4.rst  323p.rst  background_plots.py  index.rst  kona.rst  mcmc_near_miss.rst  neatm.rst  neatm_fitting.rst  neatm_plots.py  palomar.rst  propagation_plots.py  spherex.rst  wise.rst
src/examples/: README.rst  galactic_center.py  getting_started.py  on_sky.py  plot_b_plane.py  plot_close_approach.py  plot_comet.py  plot_elevation.py  plot_extended_body.py  plot_flux_vs_wavelength.py  plot_light_curve.py  plot_mcmc_near_miss.py  plot_mini_moon.py  plot_mpc_state.py  plot_observability.py  plot_orbit_fit.py  plot_oumuamua.py  plot_phases.py  plot_ranging.py  plot_stm.py  plot_thermal_model.py  plot_trojans.py  plot_uncertainty.py  repack_horizons_kernels.py  solar_spectrum.py
src/kete/: __init__.py  analysis.py  conversion.py  deprecation.py  extended_body.py  fitting.py  flux.py  fov.py  gaia.py  horizons.py  irsa.py  mpc.py  plot.py  propagation.py  ptf.py  resonance.py  shape.py  spherex.py  spice.py  spitzer.py  state_transition.py  tap.py  time.py  vector.py  wise.py  ztf.py
src/kete/observations/: mpc_api.py
src/kete/orbit_fitting/: __init__.py  common.py  gaia.py  mpc_api.py  mpc_legacy.py  radar.py
src/kete/rust/: analysis.rs  covariance.rs  debias.rs  desigs.rs  diffuse_state.rs  elements.rs  extended_body.rs  fitting.rs  frame.rs  horizons.rs  kepler.rs  lib.rs  maybe_vec.rs  mpc.rs  nongrav.rs  propagation.rs  simult_states.rs  state.rs  state_transition.rs  stats.rs  time.rs  uncertain_state.rs  utils.rs  vector.rs
src/kete/rust/flux/: common.rs  mod.rs  models.rs  reflected.rs  thermal_fitting.rs
src/kete/rust/fovs/: checks.rs  collection.rs  definitions.rs  (+1 more)
src/kete_core/: Cargo.toml
src/kete_core/benches/: propagation.rs  spice.rs  thermal.rs
src/kete_core/data/: masses.tsv  mpc_obs.tsv  naif_ids.csv  obs_errs.csv  readme.md
src/kete_core/src/: analysis.rs  bands.rs  cache.rs  desigs.rs  elements.rs  errors.rs  kepler.rs  lib.rs  naif_ids.rs  obs_codes.rs  quaternion.rs  simult_states.rs  state.rs  stats.rs  uncertain_state.rs  util.rs
src/kete_core/src/constants/: gravity.rs  mod.rs  neos.rs  spitzer.rs  universal.rs  wise.rs
src/kete_core/src/fitting/: halley.rs  newton.rs  reduced_chi2.rs
src/kete_core/src/flux/: common.rs  frm.rs  mod.rs  neatm.rs  reflected.rs  shapes.rs  sun.rs
src/kete_core/src/forces/: acceleration.rs  frozen.rs  gravity.rs  mod.rs  nongrav.rs  parameter_mask.rs  set.rs  sum.rs  traits.rs
src/kete_core/src/forces/nongrav/: dust.rs  farnocchia.rs  jpl_comet.rs  kind.rs  mod.rs
src/kete_core/src/fov/: fov_like.rs  generic.rs  mod.rs  neos.rs  patches.rs  ptf.rs  spherex.rs  spitzer.rs  wise.rs  ztf.rs
src/kete_core/src/frames/: center.rs  definitions.rs  earth.rs  mod.rs  rotation.rs  vector.rs  wgs_84.rs
src/kete_core/src/integrators/: bulirsch_stoer.rs  gauss_jackson.rs  mod.rs  picard.rs  radau.rs  runge_kutta.rs  stress_tests.rs  util.rs
src/kete_core/src/io/: binary.rs  bytes.rs  mod.rs  parquet.rs  serde_const_arr.rs
src/kete_core/src/propagation/: acceleration.rs  bulirsch_stoer.rs  gauss_jackson.rs  jacobian.rs  kepler.rs  mod.rs  nongrav.rs  picard.rs  radau.rs  runge_kutta.rs  state_transition.rs  stress_tests.rs  util.rs
src/kete_core/src/shape/: extended_body.rs  io.rs  mod.rs  polyhedron.rs  rotation.rs  units.rs
src/kete_core/src/spice/: ck.rs  ck_segments.rs  daf.rs  das.rs  interpolation.rs  mod.rs  naif_ids.rs  obs_codes.rs  pck.rs  pck_segments.rs  sclk.rs  spk.rs  spk_segments.rs
src/kete_core/src/state/: adaptive.rs  diffuse.rs  mod.rs  simultaneous.rs  stm.rs  traits.rs  uncertain.rs
src/kete_core/src/stats/: ks_test.rs  quantile.rs
src/kete_core/src/time/: leap_second.rs  mod.rs  scales.rs
src/kete_fitting/: Cargo.toml  README.md
src/kete_fitting/src/: batch.rs  debias.rs  diff_correction.rs  filter.rs  horizons.rs  iod.rs  lambert.rs  lib.rs  mcmc.rs  mpc.rs  obs.rs  orbit_fitting.rs  ranging.rs  uncertain_state.rs
src/kete_flux/: Cargo.toml  README.md
src/kete_flux/benches/: thermal.rs
src/kete_flux/src/: comets.rs  common.rs  frm.rs  lib.rs  neatm.rs  reflected.rs  shapes.rs  sun.rs
src/kete_flux/src/fitting/: mcmc.rs  mod.rs  tests.rs  types.rs
src/kete_spice/: Cargo.toml  README.md
src/kete_spice/benches/: propagation.rs  spice.rs
src/kete_spice/src/: daf.rs  fov_checks.rs  fov_ext.rs  frame_ext.rs  interpolation.rs  jacobian.rs  lib.rs  propagation.rs  sclk.rs  small_body_propagation.rs  state_transition.rs
src/kete_spice/src/ck/: array.rs  mod.rs  segments.rs  type2.rs  type3.rs
src/kete_spice/src/pck/: array.rs  mod.rs  segments.rs  type2.rs
src/kete_spice/src/propagation/: analysis.rs  batch.rs  diffuse.rs  jacobian.rs  mod.rs  recenter.rs  spk_n_body.rs  stm.rs
src/kete_spice/src/spice/: ck.rs  ck_segments.rs  daf.rs  interpolation.rs  mod.rs  pck.rs  pck_segments.rs  sclk.rs  spk.rs  spk_segments.rs
src/kete_spice/src/spk/: array.rs  mod.rs  repack.rs  segments.rs  type1.rs  type10.rs  type13.rs  type18.rs  type2.rs  type21.rs  type3.rs  type9.rs
src/kete_stats/: Cargo.toml  README.md
src/kete_stats/src/: data.rs  healpix.rs  lib.rs
src/kete_stats/src/fitting/: bisection.rs  golden_section.rs  halley.rs  mod.rs  nelder_mead.rs  newton.rs
src/tests/: conftest.py  test_conversion.py  test_extended_body.py  test_gaia.py  test_horizons.py  test_mpc.py  test_population.py  test_propagation.py  test_shape.py  test_spice.py  test_spitzer.py  test_state.py  test_vector.py
src/tests/flux/: test_common.py  test_model.py
(+11 files in other folders)
