[package]
name = "kete_core"
readme = "README.md"
keywords = ["physics", "simulation", "astronomy", "asteroid", "comet"]
categories = ["Aerospace", "Science", "Simulation"]
description = "Kete - Simulator of telescope surveys of the Solar System."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "kete_core"

[lints]
workspace = true

[dependencies]
argmin = "^0.11.0"
argmin-math = "^0.5.1"
chrono = "^0.4.38"
crossbeam = "^0.8.4"
directories = "^6.0"
flate2 = "^1"
itertools = "^0.14.0"
kete_stats = {version = "*", path = "../kete_stats"}
nalgebra = {version = "^0.34.2", features = ["rayon"]}
nom = "8.0.0"
polars = {version = "0.53.0", optional=true, features=["parquet", "polars-io"]}
pathfinding = "^4.10.0"
pyo3 = { version =  "^0.28.2", features = ["abi3-py39"], optional=true}
rayon = "^1.11.0"

[dev-dependencies]
criterion = { version = "^0.5.1", features = ["html_reports"] }

# pprof is used for flame graphs, this is failing on windows currently so only
# linux and mac are supported here.
[target.'cfg(target_os = "linux")'.dev-dependencies]
pprof = { version = "0.14.1", features = ["flamegraph", "criterion"] }

# macos needs the frame-pointer flag, however this doesn't function on linux
[target.'cfg(target_os = "macos")'.dev-dependencies]
pprof = { version = "0.14.1", features = ["flamegraph", "criterion", "frame-pointer"] }

[[bench]]
name = "propagation"
harness = false