[package]
name = "kete_fitting"
readme = "README.md"
keywords = ["physics", "simulation", "astronomy", "asteroid", "comet"]
categories = ["Aerospace", "Science", "Simulation"]
description = "Orbit determination and fitting for Kete."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "kete_fitting"

[lints]
workspace = true

[features]
## Enable HTTP fetching from the JPL SBDB API and local JSON caching.
fetch = ["dep:serde", "dep:serde_json", "dep:ureq"]

[dependencies]
kete_core = {version = "*", path = "../kete_core"}
kete_spice = {version = "*", path = "../kete_spice"}
nalgebra = {version = "^0.34.2", features = ["rayon"]}
nuts-rs = "0.17"
rand = "^0.10.0"
rand_distr = "^0.6.0"
rayon = "^1.11.0"
serde = { version = "^1", features = ["derive"], optional = true }
serde_json = { version = "^1", optional = true }
ureq = { version = "^3", optional = true }

[dev-dependencies]
kete_spice = {version = "*", path = "../kete_spice", features = ["test"]}
